# skystats

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Caddy.example  Caddyfile.example  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  response.json  svelte.config.js  tailwind.config.js  vite.config.ts
.github/actions/pnpm-install/: action.yml
.github/workflows/: build_docker.yml  rust.yml  website.yml
assets/: .gitignore  Cargo.toml  Dockerfile  README.md
assets/src/: main.rs
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
backend/src/: main.rs
backend/src/database/: leaderboards.rs  mod.rs
backend/src/database/migrations/: 1_initial.sql
backend/src/hypixel/: mod.rs
backend/src/models/: error.rs  inventory.rs  leaderboard.rs  mod.rs  player.rs  profile.rs
backend/src/models/hypixel/: inventory.rs  mod.rs  player.rs  profiles.rs  skills.rs
backend/src/mojang/: mod.rs
backend/src/process/: mod.rs  player.rs
backend/src/processing/: dungeons.rs  inventory.rs  mod.rs  player.rs  profile.rs  rank.rs  skills.rs  stats.rs
backend/src/routes/: leaderboards.rs  mod.rs  player.rs  profile.rs
frontend/: .env.example  .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
frontend/.storybook/: main.ts
frontend/src/: app.css  app.html
frontend/src/components/: head.svelte  header.svelte  homePageCard.svelte  playerRender.svelte  skillComponent.svelte
frontend/src/components/BasicStats/: BasicStats.svelte
frontend/src/components/PlayerProfile/: PlayerProfile.svelte  Popover.svelte
frontend/src/components/SkillComponent/: SkillComponent.svelte  (+1 more)
frontend/src/constants/: index.ts
frontend/src/lib/: skyblock.d.ts
frontend/src/params/: uuid.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/types/: index.ts
public/resources/css/: inventory.css
src/: app.html
src/api/: hypixel.ts  mojang.ts  profiles.ts
src/api/hypixel/: index.ts
src/components/: head.svelte  header.svelte  homePageCard.svelte
src/components/BasicStats/: BasicStats.svelte
src/components/PlayerProfile/: PlayerProfile.svelte  Popover.svelte  PopoverItem.svelte
src/components/SkillComponent/: SkillComponent.svelte
src/constants/: bestiary.ts  bonuses.ts  forge.ts  hotm.ts  index.ts  items.ts  leveling.ts  misc.ts  ranks.ts  slayers.ts
src/db/mongo/: collections.d.ts  innit-collections.ts  mongo.ts  players.ts  profiles.ts
src/db/redis/: redis.ts
src/lib/: custom-resources.ts  hashes.ts  helper.ts  player.ts  renderer.ts  skyblock.d.ts  stats.ts
src/lib/helper/: cache.ts  item.ts
src/lib/stats/: bestiary.ts  currencies.ts  enchanting.ts  farming.ts  index.ts  items.ts  mining.ts  skills.ts  slayer.ts
src/params/: ign.ts  playerId.ts  textureId.ts  uuid.ts
src/redis/: connection.ts
src/routes/: +page.svelte
src/routes/@[player=playerId]/: +layout.server.ts  +page.server.ts
src/routes/discord/: +server.ts
src/types/: hypixel.d.ts  index.ts  util.d.ts
src/types/processed/: rendered.d.ts  request.d.ts  response.d.ts  stats.d.ts
src/types/raw/: player.d.ts  profile.d.ts
(+54 files in other folders)
