[package]
name = "skystats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
http-body = "0.4.5"
moka = { version = "0.11.2", features = ["future"] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.29.0", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
fastnbt = "2.4.4"
base64 = "0.21.2"
flate2 = "1.0.26"
serde_with = "3.0.0"
pg-embed = { git = "https://github.com/faokunega/pg-embed" }
rand = "0.8.5"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid"] }
dashmap = "5.5.0"
