[package]
name = "skystats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
http-body = "0.4.5"
moka = { version = "0.11.3", features = ["future"] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
fastnbt = "2.4.4"
base64 = "0.21.3"
flate2 = "1.0.27"
serde_with = "3.3.0"
simdnbt = { git = "https://github.com/mat-1/simdnbt", version = "0.1.0" }
